fix(core-select): remove z-index (#533)
- z-index interfered with neighbouring Tooltip component appearing behind the Select component

re #525

--- a/packages/Select/Select.modules.scss
+++ b/packages/Select/Select.modules.scss
@@ -22,14 +22,11 @@
 
 .positionSelectOnTop {
   composes: relative from '../../shared/styles/Position.modules.scss';
-
-  z-index: 2;
 }
 
 .iconsPosition {
   composes: absolute centerVertically from '../../shared/styles/Position.modules.scss';
   composes: iconRight from '../../shared/components/FormField/FormField.modules.scss';
 
-  z-index: 3;
   pointer-events: none;
 }
